--- a/templates/base.html
+++ b/templates/base.html
@@ -24,9 +24,13 @@
         <ul class="nav-links">
             <li><a href="{% url 'home' %}">Home</a></li>
             <li><a href="{% url 'shop' %}">Shop</a></li>
-            <li><a href="#">Sign In</a></li>
-            <li><a href="#">Sign Up</a></li>
-            <li><a href="#">Cart</a></li>
+            {% if user.is_authenticated %}
+            <li><a href="{% url 'logout' %}">Logout ({{ user.username }})</a></li>
+            <li><a href="{% url 'view_cart' %}">Cart</a></li>
+            {% else %}
+            <li><a href="{% url 'login' %}">Sign In</a></li>
+            <li><a href="{% url 'signup' %}">Sign Up</a></li>
+            {% endif %}
         </ul>
     </nav>
 
