--- a/templates/shop.html
+++ b/templates/shop.html
@@ -19,6 +19,17 @@
     {% endfor %}
 </div>
 
+{% if messages %}
+<div class="messages">
+    {% for message in messages %}
+    <div class="alert alert-{{ message.tags }}">
+        {{ message }}
+    </div>
+    {% endfor %}
+</div>
+{% endif %}
+
+
 <!-- 🛍 Product Grid -->
 <div class="product-grid" id="productGrid">
     {% for product in products %}
