--- a/templates/shop/cart.html
+++ b/templates/shop/cart.html
@@ -40,6 +40,7 @@
 </div>
 
 <script src="{% static 'js/cart.js' %}"></script>
+<script src="{% static 'js/messages_popup.js' %}"></script>
 {% else %}
 <div class="empty-cart">
     <p>Your cart is empty</p>
